--- a/.gitconfig
+++ b/.gitconfig
@@ -6,4 +6,11 @@
 [alias]
     st = status
     ci = commit -v
+    d = difftool
+    co = checkout
+[diff]
+    tool = vimdiff
+[difftool]
+    prompt = false
+    
 
